; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c___libogc_exit.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c___libogc_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYS_SHUTDOWN = common dso_local global i32 0, align 4
@reload = common dso_local global i32 0, align 4
@SYS_RETURNTOMENU = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__libogc_exit(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i64 (...) @__stub_found()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32, i32* @SYS_SHUTDOWN, align 4
  %7 = call i32 @SYS_ResetSystem(i32 %6, i32 0, i32 0)
  %8 = load i32, i32* @reload, align 4
  %9 = call i32 @__lwp_thread_stopmultitasking(i32 %8)
  br label %10

10:                                               ; preds = %5, %1
  %11 = load i32, i32* @SYS_RETURNTOMENU, align 4
  %12 = call i32 @SYS_ResetSystem(i32 %11, i32 0, i32 0)
  ret void
}

declare dso_local i64 @__stub_found(...) #1

declare dso_local i32 @SYS_ResetSystem(i32, i32, i32) #1

declare dso_local i32 @__lwp_thread_stopmultitasking(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
